--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "colyseus": "^0.14.0",
     "cors": "^2.8.5",
     "express": "^4.16.4",
-    "express-jwt": "^5.3.1"
+    "express-jwt": "^5.3.1",
+    "git": "^0.1.5"
   }
 }
